[package]
name = "contains"
version = "0.1.0"
edition = "2021"
description = "A Container trait"
documentation = "https://docs.rs/container"
readme = "Readme.md"
repository = "https://github.com/Jon-Davis/contains"
license = "MIT"
keyword = ["contains", "container", "in"]
categories = ["rust-patterns"]

[dependencies]
